# ReSkillio

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.deploy.yaml  cloudbuild.yaml  pipeline.yaml  pyproject.toml  requirements.txt
config/: settings.py
docs/: CNAME  api.html  app.html  architecture.html  companion.html  deployment.html  index.html  intake.html  pricing.html  radar.html
reskillio/: __init__.py
reskillio/agents/: company_radar_agent.py  market_analyst_agent.py  market_pulse_agent.py  pathway_planner_agent.py  skill_extractor_agent.py
reskillio/api/: __init__.py  main.py  schemas.py
reskillio/companion/: checkin_store.py  digest_generator.py  models.py
reskillio/embeddings/: vertex_embedder.py
reskillio/ingestion/: jd_parser.py  pdf_reader.py  section_parser.py
reskillio/intake/: conversation_engine.py  intake_store.py
reskillio/models/: __init__.py  analyze.py  drift.py  enrich.py  gap.py  industry.py  intake.py  jd.py  lakehouse.py  market.py  narrative.py  pathway.py  person_gap.py  profile.py  registry.py  resume.py  skill.py  trait.py
reskillio/monitoring/: alert_policy.py  drift_monitor.py  drift_store.py  metrics_writer.py
reskillio/nlp/: __init__.py  skill_extractor.py
reskillio/pipelines/: __init__.py  analyze_pipeline.py  auto_gap_pipeline.py  (+12 more)
scripts/: build_industry_vectors.py  compile_pipeline.py  export_taxonomy.py  register_model.py  retrain.py  seed_market_data.py  setup_cicd.py  setup_companion_tables.py  setup_gcp.py  setup_monitoring.py  setup_radar_tables.py  submit_pipeline.py  verify_gcp.py
(+46 files in other folders)
